[package]
name    = "cjvalpy"
version = "0.4.1"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
license = "MIT"
homepage="https://github.com/hugoledoux/cjvalpy"
repository="https://github.com/hugoledoux/cjvalpy"
description = "The Python bindings of the official CityJSON validator"
readme = "README.md"
edition = "2021"

[dependencies]
cjval = "0.6.0"
# cjval = { path = "../cjval" }
indexmap = "1.9.1"

[dependencies.pyo3]
version = "~0.17.0"
features = ["extension-module"]

[lib]
name = "cjvalpy"
crate-type = ["cdylib"]

